[project]
name = "pozalabs-pydub"
version = "0.37.0"
description = "Manipulate audio with an simple and easy high level interface (Pozalabs fork)"
license = "MIT"
authors = [{ name = "sunwoong", email = "sunwoong@pozalabs.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.optional-dependencies]
meter = ["audiometer>=0.17.0,<1.0.0"]
zstd = ["zstandard>=0.23.0"]

[dependency-groups]
dev = [
    "memray>=1.13.4",
    "memory-profiler>=0.61.0",
    "Cython>=3.0.2,<3.0.10",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.1.0",
    "pydub-core",
]

[tool.uv.workspace]
members = ["pydub-core"]

[tool.uv.sources]
pydub-core = { workspace = true }

[build-system]
requires = ["setuptools", "Cython>=3.0.2,<3.0.10"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pydub*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "RUF022", "RUF100", "RUF101"]
