[project]
name = "pozalabs-pydub"
version = "0.39.0"
description = "Manipulate audio with an simple and easy high level interface (Pozalabs fork)"
license = "MIT"
authors = [{ name = "sunwoong", email = "sunwoong@pozalabs.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.optional-dependencies]
zstd = ["zstandard>=0.23.0"]

[dependency-groups]
dev = [
    "memray>=1.13.4",
    "memory-profiler>=0.61.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.1.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "pydub._pydub_core"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "RUF022", "RUF100", "RUF101"]
